2013-11-18  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/decl.c (gnat_to_gnu_entity) <object>: Deal with an
	error mark as renamed object in type annotating mode.

2013-11-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR ada/54040
	* s-linux-x32.ads: New file.
	* s-osprim-x32.adb: Likewise.
	* s-linux.ads (time_t): New type.
	* s-linux-alpha.ads (time_t):  Likewise.
	* s-linux-hppa.ads (time_t):  Likewise.
	* s-linux-mipsel.ads (time_t):  Likewise.
	* s-linux-sparc.ads (time_t):  Likewise.
	* s-osinte-linux.ads (time_t): Mark it private.  Replace long
	with System.Linux.time_t.
	(timespec): Replace long with time_t.
	* s-osinte-posix.adb (To_Timespec): Likewise.
	* s-taprop-linux.adb (timeval): Replace C.long with
	System.OS_Interface.time_t.
	* gcc-interface/Makefile.in (LIBGNAT_TARGET_PAIRS): Replace
	s-linux.ads with s-linux-x32.ads, s-osprim-posix.adb with
	s-osprim-x32.adb for x32.

2013-11-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc-interface/trans.c: Include gimple.h and pointer-set.h.

2013-11-12  Andrew MacLeod  <amacleod@redhat.com>

	* gcc-interface/trans.c: Include gimplify.h.

2013-11-11  Tristan Gingold  <gingold@adacore.com>
	    Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/utils2.c (gnat_build_constructor): Also set the flag
	CONSTRUCTOR_NO_CLEARING on the constructor.

2013-10-30  Sharad Singhai  <singhai@google.com>

	* gnat_ugn.texi: Remove option description for PR middle-end/58134.

2013-10-29  David Malcolm  <dmalcolm@redhat.com>

	* gcc-interface/trans.c (finalize_nrv): Update for conversion of
	symtab types to a true class hierarchy.
	* gcc-interface/utils.c (gnat_write_global_declarations): Likewise.

2013-10-28  Trevor Saunders  <tsaunders@mozilla.com>

	* gcc-interface/decl.c (components_to_record): Adjust stack vector.

2013-10-24  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc-interface/Make-lang.in (ADA_DEPS): Fix quoting.

2013-10-19  Thomas Quinot  <quinot@adacore.com>
